下層mvのクラス名修正 25.08.02

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -259,21 +259,16 @@ a {
 	margin-top: 5.25rem;
 }
 
+.layout-sub-mv {
+	height: 28.75rem;
+}
+
 .layout-two-column {
 	margin-top: 3.1875rem;
 }
 
 .layout-voice {
 	margin-top: 5.5rem;
-}
-
-.about-mv {
-	background-image: url(../images/common/about-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
 }
 
 .about {
@@ -595,15 +590,6 @@ a {
 	gap: 2.5rem;
 	position: relative;
 	z-index: 20;
-}
-
-.blog-mv {
-	background-image: url(../images/common/blog-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
 }
 
 .blog {
@@ -932,15 +918,6 @@ a {
 	width: 17.5rem;
 }
 
-.campaign-mv {
-	background-image: url(../images/common/campaign-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
-}
-
 .campaign {
 	overflow: hidden;
 }
@@ -1084,15 +1061,6 @@ a {
 	margin-top: 0.1875rem;
 }
 
-.contact-mv {
-	background-image: url(../images/common/contact-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
-}
-
 .contact {
 	filter: drop-shadow(0 0.25rem 0.25rem rgba(0, 0, 0, 0.25));
 	position: relative;
@@ -1159,15 +1127,6 @@ a {
 .contact__btn {
 	margin-top: 2.375rem;
 	text-align: center;
-}
-
-.faq-mv {
-	background-image: url(../images/common/faq-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
 }
 
 .footer-nav {
@@ -1533,15 +1492,6 @@ a {
 
 .information-cards__item.is-active {
 	display: block;
-}
-
-.information-mv {
-	background-image: url(../images/common/info-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
 }
 
 .information {
@@ -2318,15 +2268,6 @@ a {
 	right: 0.0625rem;
 }
 
-.price-mv {
-	background-image: url(../images/common/price-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
-}
-
 .price-table__content + .price-table__content {
 	margin-top: 2.5625rem;
 }
@@ -2559,19 +2500,6 @@ a {
 	width: 1.125rem;
 }
 
-.site-map-mv {
-	background-image: url(../images/common/site-map-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
-}
-
-.site-map-mv__title-text {
-	margin-left: 0.125rem;
-}
-
 .sp-nav {
 	background-color: #408F95;
 	display: none;
@@ -2700,12 +2628,87 @@ a {
 	padding-top: 0.5625rem;
 }
 
+.sub-mv {
+	position: relative;
+}
+
+.sub-mv.sub-mv--campaign {
+	background-image: url(../images/common/campaign-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--about-us {
+	background-image: url(../images/common/about-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--information {
+	background-image: url(../images/common/info-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--blog {
+	background-image: url(../images/common/blog-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--blog-single {
+	background-image: url(../images/common/blog-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--voice {
+	background-image: url(../images/common/voice-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--price {
+	background-image: url(../images/common/price-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--faq {
+	background-image: url(../images/common/faq-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--contact {
+	background-image: url(../images/common/contact-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.sub-mv.sub-mv--site-map {
+	background-image: url(../images/common/site-map-mv.webp);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .sub-mv__header {
 	left: 50%;
 	position: absolute;
 	text-align: center;
 	top: 50%;
 	transform: translate(-50%, -50%);
+	width: 100%;
 }
 
 .sub-mv__title {
@@ -2715,15 +2718,16 @@ a {
 	font-weight: 400;
 }
 
-.sub-mv__title--space {
+.sub-mv__title.sub-mv__title--space {
 	letter-spacing: -0.006em;
 }
 
-.sub-mv__title--space2 {
+.sub-mv__title.sub-mv__title--space2 {
 	letter-spacing: -0.005em;
 }
 
 .sub-mv__title span {
+	margin-left: 0.125rem;
 	text-transform: uppercase;
 }
 
@@ -2919,15 +2923,6 @@ a {
 	grid-gap: 2.5rem;
 	display: grid;
 	gap: 2.5rem;
-}
-
-.voice-mv {
-	background-image: url(../images/common/voice-mv.webp);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 28.75rem;
-	position: relative;
 }
 
 .voice {
@@ -3619,17 +3614,16 @@ html {
 	margin-top: 9rem;
 }
 
+.layout-sub-mv {
+	height: 34.25rem;
+}
+
 .layout-two-column {
 	margin-top: 9.3125rem;
 }
 
 .layout-voice {
 	margin-top: 9rem;
-}
-
-.about-mv {
-	background-image: url(../images/common/about-mv-pc.webp);
-	height: 34.25rem;
 }
 
 .about::after {
@@ -3764,15 +3758,6 @@ html {
 .blog-cards.blog-cards--2col {
 	grid-template-columns: repeat(2, 1fr);
 	row-gap: 5rem;
-}
-
-.blog-mv {
-	background-image: url(../images/common/blog-mv-pc.webp);
-	height: 34.25rem;
-}
-
-.blog-mv--single-page {
-	background-image: url(../images/common/blog-detail-mv-pc.webp);
 }
 
 .blog {
@@ -3955,11 +3940,6 @@ html {
 	width: 32.5rem;
 }
 
-.campaign-mv {
-	background-image: url(../images/common/campaign-mv-pc.webp);
-	height: 34.25rem;
-}
-
 .campaign__inner.inner {
 	padding-left: 1.1875rem;
 }
@@ -3979,11 +3959,6 @@ html {
 
 .column-aside__item {
 	margin-top: 1.5rem;
-}
-
-.contact-mv {
-	background-image: url(../images/common/contact-mv-pc.webp);
-	height: 34.25rem;
 }
 
 .contact {
@@ -4059,11 +4034,6 @@ html {
 
 .contact__btn {
 	padding-right: 0.875rem;
-}
-
-.faq-mv {
-	background-image: url(../images/common/faq-mv-pc.webp);
-	height: 34.25rem;
 }
 
 .footer-nav__left-content {
@@ -4239,11 +4209,6 @@ html {
 	aspect-ratio: 492/313;
 	margin-top: 0;
 	width: 47.67%;
-}
-
-.information-mv {
-	background-image: url(../images/common/info-mv-pc.webp);
-	height: 34.25rem;
 }
 
 .information {
@@ -4533,11 +4498,6 @@ html {
 	width: 18.8125rem;
 }
 
-.price-mv {
-	background-image: url(../images/common/price-mv-pc.webp);
-	height: 34.25rem;
-}
-
 .price-table__content + .price-table__content {
 	margin-top: 2.5rem;
 }
@@ -4687,13 +4647,44 @@ html {
 	color: #0D2936;
 }
 
-.site-map-mv {
-	background-image: url(../images/common/site-map-mv-pc.webp);
-	height: 34.25rem;
+.sub-mv.sub-mv--campaign {
+	background-image: url(../images/common/campaign-mv-pc.webp);
 }
 
-.site-map-mv--shadow-pc {
-	box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+.sub-mv.sub-mv--about-us {
+	background-image: url(../images/common/about-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--information {
+	background-image: url(../images/common/info-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--blog {
+	background-image: url(../images/common/blog-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--blog-single {
+	background-image: url(../images/common/blog-detail-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--voice {
+	background-image: url(../images/common/voice-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--price {
+	background-image: url(../images/common/price-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--faq {
+	background-image: url(../images/common/faq-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--contact {
+	background-image: url(../images/common/contact-mv-pc.webp);
+}
+
+.sub-mv.sub-mv--site-map {
+	background-image: url(../images/common/site-map-mv-pc.webp);
 }
 
 .sub-mv__header {
@@ -4704,7 +4695,7 @@ html {
 	font-size: 5rem;
 }
 
-.sub-mv__title--space-pc {
+.sub-mv__title.sub-mv__title--space-pc {
 	letter-spacing: 0.006em;
 }
 
@@ -4894,11 +4885,6 @@ html {
 .voice-cards {
 	gap: 5rem 2.5rem;
 	grid-template-columns: repeat(2, 1fr);
-}
-
-.voice-mv {
-	background-image: url(../images/common/voice-mv-pc.webp);
-	height: 34.25rem;
 }
 
 .voice::before {
