--- a/src/sass/module/_page-campaign.scss
+++ b/src/sass/module/_page-campaign.scss
@@ -15,6 +15,7 @@
   left: rem(15);
   width: rem(120);
   height: rem(55);
+
   @include mq(md) {
     background-image: url(../images/common/goldfish-pc.svg);
     top: rem(-70);
@@ -28,9 +29,12 @@
 .page-campaign__items {
   // display: grid;
   // gap: rem(40);
+  padding: 0 rem(32) 0 rem(33); // カードにwidthをつけずにpaddingで調整 25.8.21
   margin-top: rem(40);
-  // @include mq(md) {
+
+  @include mq(md) {
   //   grid-template-columns: repeat(2, 1fr);
   //   gap: rem(80) rem(40);
-  // }
+  padding: 0;
+  }
 }
