--- a/src/sass/plugin/_wp-pagenavi.scss
+++ b/src/sass/plugin/_wp-pagenavi.scss
@@ -83,7 +83,9 @@
 }
 
 .wp-pagenavi .page.larger.u-desktop {
-  @media (max-width: 767px) {
-    display: none;
+  display: none;
+
+  @include mq("md") {
+    display: inline-flex;
   }
 }
