Priceページ修正 25.09.03

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1965,6 +1965,7 @@ a {
 
 .page-price-table__item dd {
 	border-left: 0.0625rem solid #408F95;
+	padding-bottom: 1rem;
 	padding-left: 0.9375rem;
 	padding-right: 0.9375rem;
 	padding-top: 1.125rem;
@@ -1987,10 +1988,6 @@ a {
 	position: absolute;
 	top: -1.5rem;
 	width: 7.5rem;
-}
-
-.page-price__table {
-	margin: auto;
 }
 
 .page-site-map {
@@ -4382,7 +4379,7 @@ a[href^="tel:"] {
 
 .page-price-table__title {
 	flex-direction: column-reverse;
-	width: 28.6%;
+	width: 28.5714285714%;
 }
 
 .page-price-table__title::before {
@@ -4393,7 +4390,7 @@ a[href^="tel:"] {
 }
 
 .page-price-table__items {
-	width: 71.50997151%;
+	width: 71.4285714286%;
 }
 
 .page-price-table__item {
