--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1693,7 +1693,7 @@ a {
 	right: 0.0625rem;
 }
 
-.page-404__wrapper {
+.page-404-area {
 	background-color: #408F95;
 	padding-bottom: 2.75rem;
 	padding-top: 5rem;
@@ -4257,7 +4257,7 @@ a[href^="tel:"] {
 	right: 0.125rem;
 }
 
-.page-404__wrapper {
+.page-404-area {
 	padding-bottom: 9.5rem;
 	padding-top: 5.625rem;
 }
