①管理画面のカスタム投稿一覧にアイキャッチを表示 ②サイドバー修正 ③ブログ一覧の文字数制限を修正 25.10.05

--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -50,11 +50,11 @@
 
 .blog-card__text {
   margin-top: rem(15);
-  // 5行より多くなったら「･･･」となるようにする（WP化で追加）
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 5;
+  // 5行より多くなったら「･･･」となるようにする（WP化で追加 → だが、PHPで文字数制限による対応をしているので両方は要らない。編集画面での改行を反映させる処理とかもあるのでPHPで対応する  25.10.5）
+  // display: -webkit-box;
+  // overflow: hidden;
+  // -webkit-box-orient: vertical;
+  // -webkit-line-clamp: 5;
 }
 
 // .blog-card__text-block {
