--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -8,11 +8,12 @@
   width: rem(33);
   height: rem(32);
   padding: 0;
+  outline: revert;  // _reset.scssに outline: none; があるため、ここだけその影響を打ち消しデフォルトのフォーカスリングに戻す
 }
 
-.hamburger:focus {
-  outline: rem(2) solid #391E88;
-}
+// .hamburger:focus {
+//   outline: rem(2) solid #391E88;
+// }
 
 .hamburger span {
   position: absolute;
@@ -20,7 +21,7 @@
   width: inherit;
   height: rem(1);
   background-color: $white;
-  transition: transform 0.3s;
+  transition: transform 0.3s, top 0.3s, right 0.3s, width 0.3s; // transformだけのときよりこの方が動きが自然  25.12.10
 }
 
 .hamburger span:first-child {
