①pcの電話番号発信対応を修正 ②ドロワーメニュー開閉時のinert属性を設定 26.02.08

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -3503,6 +3503,15 @@ textarea.wpcf7-form-control.wpcf7-textarea.wpcf7-validates-as-required {
 	display: none;
 }
 
+@media (hover: hover) and (pointer: fine) {
+
+a[href^="tel:"] {
+	cursor: default;
+	pointer-events: none;
+}
+
+}
+
 @media (any-hover: hover) {
 
 a:hover {
@@ -3556,11 +3565,6 @@ a:hover {
 
 html {
 	font-size: 1.4814814815vw;
-}
-
-a[href^="tel:"] {
-	cursor: default;
-	pointer-events: none;
 }
 
 .layout-about {
